force-app/main/default/objects/City__c/City__c.object-meta.xml
<CustomObject>
    <description>Lista di citta con corrispettivo codice belfiore per il calcolo del codice fiscale</description>
    <label>Città</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Città</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>