force-app/main/default/objects/City__c/fields/BelfioreCode__c.field-meta.xml
<CustomField>
    <fullName>BelfioreCode__c</fullName>
    <label>Codice Belfiore</label>
    <length>10</length>
    <type>Text</type>
</CustomField>