force-app/main/default/objects/City__c/fields/IsNotTransition__c.field-meta.xml
<CustomField>
    <fullName>IsNotTransition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nuovo Modello</label>
    <type>Checkbox</type>
</CustomField>