force-app/main/default/objects/City__c/fields/MunicipalityCode__c.field-meta.xml
<CustomField>
    <fullName>MunicipalityCode__c</fullName>
    <description>Indica il codice del Comune</description>
    <label>Codice Comune</label>
    <length>255</length>
    <type>Text</type>
</CustomField>