force-app/main/default/objects/City__c/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <label>Modalità pagamento</label>
    <length>30</length>
    <type>Text</type>
</CustomField>