force-app/main/default/objects/City__c/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <label>Provincia</label>
    <length>5</length>
    <type>Text</type>
</CustomField>