force-app/main/default/objects/City__c/fields/RegionName__c.field-meta.xml
<CustomField>
    <fullName>RegionName__c</fullName>
    <description>Indica il nome della Regione</description>
    <label>Nome Regione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>