force-app/main/default/objects/City__c/fields/SDV__c.field-meta.xml
<CustomField>
    <fullName>SDV__c</fullName>
    <label>SDV</label>
    <length>20</length>
    <type>Text</type>
</CustomField>