force-app/main/default/objects/City__c/fields/ServiceEle__c.field-meta.xml
<CustomField>
    <fullName>ServiceEle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Servizio Elettrico</label>
    <type>Checkbox</type>
</CustomField>