force-app/main/default/objects/City__c/fields/ServiceGas__c.field-meta.xml
<CustomField>
    <fullName>ServiceGas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Servizio Gas</label>
    <type>Checkbox</type>
</CustomField>