force-app/main/default/objects/City__c/fields/ServiceTari__c.field-meta.xml
<CustomField>
    <fullName>ServiceTari__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Servizio Tari</label>
    <type>Checkbox</type>
</CustomField>